cluster/atlassian/confluence/bespin/confluence-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence-srv
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: confluence
        track: production
    spec:
      nodeSelector:
        workerClass: infra
      containers:
      - name: confluence-srv
        image: atlassian/confluence-server:7.6.1-jdk11
        volumeMounts:
        - name: confluence-var
          mountPath: /var/atlassian/application-data/confluence
        - name: jdbc-driver-mysql-5148
          mountPath: /opt/atlassian/confluence/confluence/WEB-INF/lib/mysql-connector-java-5.1.48.jar
          subPath: mysql-connector-java-5.1.48.jar
        - name: forgot-password-redirecttojira
          mountPath: /opt/atlassian/confluence/confluence/login.vm
          subPath: login.vm
        #- name: conf-backup
        #  mountPath: /var/lib/backups

      volumes:
        #- name: conf-backup
        #  nfs:
        #    path: /mnt/jabbapool1/AtlassianBackup/confluence
        #    server: d-stor01.infra.kan.cengn.ca
        - name: confluence-var
          persistentVolumeClaim:
            claimName: confluence-var-pvc
        - name: jdbc-driver-mysql-5148
          configMap:
            name: jdbc-driver-mysql-5148
        - name: forgot-password-redirecttojira
          configMap:
            name: forgot-password-redirecttojira
