cluster/atlassian/confluence/bespin/confluence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence-service
  namespace: atlassian
  labels:
    app: confluence
spec:
  ports:
  - name: http
    port: 8090
    protocol: TCP
    targetPort: 8090
  - name: jmx
    port: 9020
    protocol: TCP
    targetPort: 9020
  selector:
    app: confluence
